          arranges the buttons closer to the way you want.
    * Dirty files dialog doesn't show if there is only one dirty file.
    * If you select all files in the dirty files dialog then choose save
      selected and then cancel any save the dialog will no longer close. It will
      remain open to prompt with what to do with the files you cancelled.
    
06/27/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Removed some NOTICES to the log in the DirtyFilesDialog since they aren't
      necessary.
    * Added some new NOTICEs to the Log

06/21/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated jsXe so that it uses the DirtyFilesDialog when selecting
      'Close All' from the File menu.
    * Updated the DirtyFilesDialog so that it doesn't close until all files are
      either saved or discarded.
    * Updated DirtyFilesDialog so that it saves it's geometry to the properties
      properly.
    * Updated jsXe so that recent files information is saved even when closing
      files through the DirtyFilesDialog

06/20/2005  Ian Lewis   <IanLewis@member.fsf.org>

    * Added Bianca Schoen to the about dialog for her contribution of a German
      translation.
    * Fixed bug that didn't mark the file as dirty when changing the indent
      and formatting and soft indent were true.

06/15/2005 Trish Hartnett <trishah136@users.sourceforge.net>
	* Added tooltip texts for the checkboxes/scroll panes of the Options dialog box.

06/13/2005 Trish Hartnett <trishah136@users.sourceforge.net>

	* Added functionality to DocumentBuffer saveAs() method, so that the fileanme
	  of the file in the buffer (e.g. Untitled-1), is the filename which appears in 
	  the filename text field in the JFileChooser.
	* Added variable confirmClose into method signature of DocumentBuffer close() 
	  method. This variable is a flag. If it's set to true then the Dialog box 
	  "Untitled -1 unsaved! Save it now?" does appear, else the code sirectly skips 